Fixed image alignment on Home page

--- a/SoundHound/Content/Site.css
+++ b/SoundHound/Content/Site.css
@@ -41,6 +41,7 @@ img {
     border-radius: 25%;
     margin-top: 20px;
     margin-bottom: 30px;
+    align-items: center
 }
 
 
